--- a/Client/Pages/SyncfusionDemo/Index.razor
+++ b/Client/Pages/SyncfusionDemo/Index.razor
@@ -1,4 +1,5 @@
-﻿@page "/"
+﻿@*@page "/"
+
 
 <PageTitle>Index</PageTitle>
 
@@ -334,3 +335,4 @@ margin-top: 10px;
         font-weight: bold !important;
     }
 </style>
+*@
