--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 @inject IJSRuntime JS
 @using Syncfusion.Blazor.Navigations
-<SfSidebar ID="Sidebar" Type="SidebarType.Push" Width="300px" DockSize="65px" EnableDock="true" @ref="Sidebar" @bind-IsOpen="SidebarToggle">
+@*<SfSidebar ID="Sidebar" Type="SidebarType.Push" Width="300px" DockSize="65px" EnableDock="true" @ref="Sidebar" @bind-IsOpen="SidebarToggle">
     <div class="sidebar" style="position:fixed;z-index:1200">
         <div class="topnav navbar navbar-dark">
             <button class="navbar-toggler" @onclick="ToggleNavMenu" />
@@ -11,15 +11,15 @@
             <NavMenu />
         </div>
     </div>
-</SfSidebar>
+</SfSidebar>*@
 
 <div class="main">
-   <div class="top-row px-4" style="z-index:1111;padding-top:0px">
+@*   <div class="top-row px-4" style="z-index:1111;padding-top:0px">
         <a href="https://www.syncfusion.com/blazor-components/" target="_blank">Blazor Components</a>
         <a href="https://blazor.syncfusion.com/documentation/" target="_blank">User Guide</a>
         <a href="http://blazor.syncfusion.com/" target="_blank">View Demos</a>
     </div>
-
+*@
     <div class="content px-4">
         @Body
     </div>
