--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -14,7 +14,7 @@
  	        <span class="syncfusion-blazor-icons syncfusion-blazor-icon-datagrid" aria-hidden="true"></span><span class="displayText" style="margin-left:5px">Pairing</span>
  	        </NavLink>
          </li>
-       	<li class="nav-item px-3">
+@*       	<li class="nav-item px-3">
  	        <NavLink class="nav-link" href="parser">
  	        <span class="syncfusion-blazor-icons syncfusion-blazor-icon-datagrid" aria-hidden="true"></span><span class="displayText" style="margin-left:5px">Parser</span>
  	        </NavLink>
@@ -28,7 +28,7 @@
  	        <NavLink class="nav-link" href="IXAgePairing">
  	        <span class="syncfusion-blazor-icons syncfusion-blazor-icon-datagrid" aria-hidden="true"></span><span class="displayText" style="margin-left:5px">Pairing</span>
  	        </NavLink>
-         </li>
+         </li>*@
      @*	<NavLink class="nav-link" href="datagrid-features">
  	<span class="syncfusion-blazor-icons syncfusion-blazor-icon-datagrid" aria-hidden="true"></span><span class="displayText" style="margin-left:5px">DataGrid</span>
  	</NavLink>
